--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -33,6 +33,35 @@
                                     <hr/>
                                     <div class="timeline-body editable hidden" contenteditable="true" data-placeholder="Answer goes here..">
                                     </div>
+                                    {% for answer in getTopAnswers(challenge) %}
+                                        <div class="timeline-body">
+                                            <div id="answer_{{ answer.id }}" class="box-comment">
+                                                {{ answer.answer }}
+                                                {% set voted = getVote(answer, app.user) %}
+                                                {% set up = "default" %}
+                                                {% set down = "default" %}
+                                                {% if voted == 1 %}
+                                                    {% set up = "primary" %}
+                                                    {% set down = "default" %}
+                                                {% elseif voted == -1 %}
+                                                    {% set up = "default" %}
+                                                    {% set down = "danger" %}
+                                                {% endif %}
+                                                <button class="btn btn-{{ down }} btn-xs pull-right downvote" onclick="vote({{ answer.id }}, -1)"><i class="fa fa-thumbs-o-down"></i> Downvote</button>
+                                                <button class="btn btn-{{ up }} btn-xs pull-right upvote" onclick="vote({{ answer.id }}, 1)"><i class="fa fa-thumbs-o-up"></i> Upvote</button>
+                                                <br><br>
+                                                    <span class="username pull-right">
+                                                        <i class="fa fa-user"></i> By {{ answer.user.username }}
+                                                        <span class="text-muted pull-right">&nbsp;on {{ answer.createdAt|date("d M Y") }}</span>
+                                                    </span>
+                                                <br><br>
+                                                    <span class="pull-right">
+                                                        <i class="fa fa-cart-arrow-down"></i> {{ getScore(answer) }} points
+                                                    </span>
+                                            </div>
+                                        </div>
+                                        <hr/>
+                                    {% endfor %}
                                     <div class="timeline-footer">
                                         <a class="btn btn-primary btn-xs" onclick="addAnswer($(this))">Add answer</a>
                                         {% if challenge.challengeAnswers is not empty %}
@@ -71,6 +100,35 @@
                                         {% endif %}
                                         <span class="time pull-right"><i class="fa fa-user"></i> By {{ challenge.user.username }}</span>
                                     </div>
+                                    {% for answer in getTopAnswers(challenge) %}
+                                        <div class="timeline-body">
+                                            <div id="answer_{{ answer.id }}" class="box-comment">
+                                                    {{ answer.answer }}
+                                                    {% set voted = getVote(answer, app.user) %}
+                                                    {% set up = "default" %}
+                                                    {% set down = "default" %}
+                                                    {% if voted == 1 %}
+                                                        {% set up = "primary" %}
+                                                        {% set down = "default" %}
+                                                    {% elseif voted == -1 %}
+                                                        {% set up = "default" %}
+                                                        {% set down = "danger" %}
+                                                    {% endif %}
+                                                    <button class="btn btn-{{ down }} btn-xs pull-right downvote" onclick="vote({{ answer.id }}, -1)"><i class="fa fa-thumbs-o-down"></i> Downvote</button>
+                                                    <button class="btn btn-{{ up }} btn-xs pull-right upvote" onclick="vote({{ answer.id }}, 1)"><i class="fa fa-thumbs-o-up"></i> Upvote</button>
+                                                    <br><br>
+                                                    <span class="username pull-right">
+                                                        <i class="fa fa-user"></i> By {{ answer.user.username }}
+                                                        <span class="text-muted pull-right">&nbsp;on {{ answer.createdAt|date("d M Y") }}</span>
+                                                    </span>
+                                                    <br><br>
+                                                    <span class="pull-right">
+                                                        <i class="fa fa-cart-arrow-down"></i> {{ getScore(answer) }} points
+                                                    </span>
+                                            </div>
+                                        </div>
+                                        <hr/>
+                                    {% endfor %}
                                 </div>
                             </li>
                         {% endfor %}
@@ -84,6 +142,40 @@
     </div>
 {% endblock %}
 {% block javascript %}
+    function vote(answer_id, vote)
+    {
+        $.ajax({
+            url: "{{ path('vote_answer') }}",
+            method: "POST",
+            data: { answer_id: answer_id, score: vote },
+            success: function(data) {
+                if (data.error == false) {
+                    var answer = $("#answer_"+answer_id);
+                    var up_vote = answer.find(".upvote");
+                    var down_vote = answer.find(".downvote");
+                    if (vote == 1) {
+                        up_vote.removeClass("btn-default");
+                        up_vote.addClass("btn-primary");
+                        if (down_vote.hasClass("btn-danger")) {
+                            down_vote.removeClass("btn-danger");
+                            down_vote.addClass("btn-default");
+                        }
+                    } else if (vote == -1) {
+                        down_vote.removeClass("btn-default");
+                        down_vote.addClass("btn-danger");
+                        if (up_vote.hasClass("btn-primary")) {
+                            up_vote.removeClass("btn-primary");
+                            up_vote.addClass("btn-default");
+                        }
+                    }
+                    window.location.href = "{{ path('home') }}";
+                } else {
+                    toastr["error"]("A aparut o eroare! Va rugam reincercati mai tarziu!", "Voteaza raspuns");
+                }
+            }
+        });
+    }
+
     function addChallenge()
     {
         var title, content;
