--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,7 +92,9 @@
                                 {% endif %}
                             </a>
                                 <!-- Menu Footer-->
+                        {% if app.user %}
                         <li><a href="{{ path("profile", {'id' : app.user.id}) }}"><i class="fa fa-user"> </i> Profile</a></li>
+                        {% endif %}
                         <li><a href= "{{ path("security_logout") }}"><i class="fa fa-sign-out"></i> Sign out</a></li>
                     </ul>
                 </div>
