--- a/src/AppBundle/Resources/views/Test/listQuestionsinTest.html.twig
+++ b/src/AppBundle/Resources/views/Test/listQuestionsinTest.html.twig
@@ -1,11 +1,15 @@
 {% extends "::base.html.twig" %}
 {% block content %}
-    <h3>{{ test.title }} - {{ categories[test.category] }}</h3>
+<div class="col-md-9">
+    <!-- general form elements -->
+    <div class="box box-primary">
+        <div class="box-header with-border">
+            <h3 class="box-title">{{ test.title }} - {{ categories[test.category] }}</h3>
+            <p><small>{{ users[test.user.id] }}, {{ test.createdAt|date('Y-m-d') }}</small></p>
+        </div>
 
-    <p><small>{{ users[test.user.id] }}, {{ test.createdAt|date('Y-m-d') }}</small></p>
-
-
-    <table class="table ">
+    <div class="box-body">
+        <table class="table ">
         {% for quest in questions %}
             <tr>
                 <th>{{ loop.index }}. {{ quest.text }}</th>
@@ -21,5 +25,8 @@
             {% endfor %}
         {% endfor %}
 
-    </table>
+        </table>
+    </div>
+    </div>
+</div>
 {% endblock %}
