--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,6 +44,7 @@
                         {% if is_granted('ROLE_ADMIN') %}
                         <li><a href="{{ path("users") }}">Utilizatori</a></li>
                         {% endif %}
+                        <li><a href="{{ path("regulations") }}">Regulament</a></li>
                     </ul>
                     <form role="search" class="navbar-form navbar-left">
                         <div class="form-group">
