--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,7 +40,7 @@
                         <li><a href={{ path('all_question_list') }}>Intrebari</a></li>
                         {% endif %}
                         <li><a href={{ path("test_list_all") }}>Teste</a></li>
-                        <li><a href="#">Clasament</a></li>
+                        <li><a href={{ path("ranking") }}>Clasament</a></li>
                         {% if is_granted('ROLE_ADMIN') %}
                         <li><a href="{{ path("users") }}">Utilizatori</a></li>
                         {% endif %}
