--- a/src/AppBundle/Resources/views/User/getProfileInformation.html.twig
+++ b/src/AppBundle/Resources/views/User/getProfileInformation.html.twig
@@ -51,19 +51,19 @@
                                 <div class="form-group">
                                     <label for="activityScore" class="col-sm-2 control-label">Activitate</label>
                                     <div class="col-sm-10">
-                                        {{ user.rank.activityScores }} ( locul {{ topActivity }} )
+                                        {{ user.rank.activityScores }} puncte ( locul {{ topActivity }} )
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="voteScore" class="col-sm-2 control-label">Voturi</label>
                                     <div class="col-sm-10">
-                                        {{ user.rank.voteScores }} ( locul {{ topVotes }} )
+                                        {{ user.rank.voteScores }} puncte ( locul {{ topVotes }} )
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="testScore" class="col-sm-2 control-label">Teste</label>
                                     <div class="col-sm-10">
-                                        {{ user.rank.testScores }} ( locul {{ topTests }} )
+                                        {{ user.rank.testScores }} puncte ( locul {{ topTests }} )
                                     </div>
                                 </div>
                             {% else %}
@@ -81,5 +81,29 @@
                     </div>
         </div>
             {% endif %}
-    </div>
+        </div>
+            {% if app.user and is_granted('ROLE_APPRENTICE') %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box box-info">
+                            <div class="box-header with-border">
+                                <h3 class="box-title">Teste</h3>
+                            </div>
+                            <div class="box-body">
+                                <ul class="list-group">
+                                    {% if testList %}
+                                    {% for test in testList  %}
+                                        <li class="list-group-item"> {{ loop.index }}. {{ test["title"] }}: <b> {{ test["userScore"] }} / {{ test["totalScore"] }} puncte </b> ({{ test["usedTime"]}} minute)</li>
+                                    {% endfor %}
+                                    {% else %}
+                                        <li class="list-group-item">Nu ai niciun test rezolvat.</li>
+                                    {% endif %}
+                                </ul>
+                            </div>
+                            <!-- /.box-header -->
+                        </div>
+                    </div>
+                </div>
+        {% endif %}
+
 {% endblock %}
